--- a/css/style.css
+++ b/css/style.css
@@ -265,7 +265,7 @@ input[type=checkbox] {
   background-repeat: no-repeat;
   background-size: cover;
   min-height: 406px;
-  max-width: calc(100vw - 40px);
+  min-width: calc(100vw - 40px);
   padding: 25px;
   border-radius: 24px;
   margin-bottom: 35px;
